# scriptor

./: .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
docs/: .vale.ini  docs.json  index.mdx
docs/styles/config/vocabularies/Mintlify/: accept.txt
src/scriptor/: __init__.py  main.py  project.py
