[project]
name = "scriptor"
version = "0.0.1"
description = "Scriptor is a open-source CLI tool designed for simple management of your local and cloud environments tailored to your home-labs or business environments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "sentry-sdk>=2.59.0",
    "typer>=0.25.1",
]

[dependency-groups]
testing = [
    "pytest>=9.0.3",
]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
    "ty>=0.0.34",
]

[project.scripts]
scriptor = "scriptor.main:app"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"
